# langgraph-social-media-agent

./: package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  integration-tests.yml  unit-tests.yml
memory-v2/: pyproject.toml
src/agents/curate-data/: types.ts
src/agents/curate-data/loaders/: ai-news-blog.ts  latent-space.ts
src/agents/curate-data/loaders/github/: langchain.ts
src/agents/curate-data/nodes/: format-data.ts  verify-github-wrapper.ts
src/clients/reddit/: client.ts  types.ts
src/clients/twitter/: client.ts
