[project]
name = "langgraph-slack"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.7",
    "langgraph-sdk>=0.1.48",
    "langmem>=0.0.15",
    "python-dotenv>=1.0.1",
    "slack-bolt>=1.22.0",
    "uvicorn>=0.34.0",
    "langgraph-prebuilt>=0.1.2",
    "aiohttp>=3.11.13",
]

[project.packages]
find = { where = ["src"] }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# CVE-2025-62727, CVE-2025-64439 (via langgraph-api): starlette has O(n^2) DoS via Range header merging and
# possible DoS via large multipart forms. No parent has released a pinned minimum yet.
# Remove once fastapi/langgraph-api raise their starlette floor to >=0.49.1.
# CVE-2025-66418, CVE-2025-66471, CVE-2026-21441: urllib3 decompression-bomb and redirect issues.
# CVE-2026-26007: cryptography subgroup attack via SECT curves.
constraint-dependencies = [
    "starlette>=0.49.1",
    "urllib3>=2.6.3",
    "cryptography>=46.0.5",
]


[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "langgraph-api>=0.0.28",
    "langgraph-cli>=0.1.75",
]
