[tool.poetry]
name = "memory-v2"
version = "0.0.1"
description = "Memory graph for the Social Media Agent."
authors = ["Brace Sproul"]
readme = "README.md"
license = "MIT"
packages = [{include = "memory_v2"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
langmem = ">=0.0.5rc5"
# CVE-2025-64439: langgraph-checkpoint < 3.0.0 has RCE in json mode of JsonPlusSerializer.
# langgraph 0.x pinned checkpoint to <3.0.0; langgraph >=1.0.0 allows checkpoint >=3.0.0.
langgraph = ">=1.0.0"
langchain-anthropic = ">=0.3.3"
langgraph-sdk = ">=0.1.51"
python-dotenv = ">=1.0.1"
# CVE-2025-68664, CVE-2025-65106: serialization injection & template injection vulnerabilities
langchain-core = ">=0.3.81"
# CVE-2025-43859: h11 accepts malformed chunked-encoding bodies
h11 = ">=0.16.0"
# CVE-2026-21441, CVE-2025-66471, CVE-2025-66418: decompression-bomb and redirect issues
urllib3 = ">=2.6.3"
# CVE-2025-69223: zip bomb vulnerability in auto_decompress
aiohttp = ">=3.13.3"
# CVE-2025-6985: XXE attacks via unsafe XSLT parsing
langchain-text-splitters = ">=0.3.9"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"